# xor_unity_native

./: .gitignore  LICENSE  README.md  test.txt
kernal/: CMakeLists.txt  build_android.sh  build_ios.sh  build_osx.sh  build_win64.bat
kernal/output/osx/kernal.bundle/Contents/MacOS/: kernal
kernal/output/x86_64/: kernal.lib
kernal/src/: Define.h  Encrypt.cpp  Encrypt.h
unity/Assets/Ab/: Ab  Ab.manifest  lua_all.bytes.manifest
unity/Assets/AbDecode/: protobuf.lua.txt
unity/Assets/Encode/: protobuf.lua.bytes
unity/Assets/Plugins/kernal/osx/kernal.bundle/Contents/: Info.plist
unity/Assets/Plugins/kernal/osx/kernal.bundle/Contents/MacOS/: kernal
unity/Assets/Scenes/: SampleScene.unity
unity/Assets/Scripts/: Encrypt.cs  Test.cs
unity/Assets/Scripts/Editor/: Menu.cs
unity/Assets/StreamingAssets/: StreamingAssets  StreamingAssets.manifest  lua_all.bytes  lua_all.bytes.manifest
unity/ProjectSettings/: AndroidResolverDependencies.xml  GvhProjectSettings.xml  ProjectSettings.asset
